syntax = "proto3";

package lesson;

option go_package = "github.com/calmato/shs-web/api/proto/lesson";

message TeacherShift {
  string teacher_id       = 1;
  int64  shift_id         = 2;
  int64  shift_summary_id = 3;
  int64  created_at       = 4;
  int64  updated_at       = 5;
}
